Anonymous | Login | 2019-02-16 15:09 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0022715 | Community | [OCCT] OCCT:Data Exchange | public | 2011-08-25 10:37 | 2013-04-29 15:21 | ||||
Reporter | szy | ||||||||
Assigned To | ika | ||||||||
Priority | normal | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | A | OS | L | OS Version | L | ||||
Product Version | [OCCT] 6.5.1 | ||||||||
Target Version | [OCCT] 6.6.0 | Fixed in Version | [OCCT] 6.6.0 | ||||||
Summary | 0022715: Incorrect faces of the filleted cube after import from iges file | ||||||||
Description | Post from the Forum - http://www.opencascade.org/org/forum/thread_21623/. [^] "It is a cube with fillets, constant fillets, same radiuses everywhere. When I load the data into Draw, I see problems in IGES. It looks like the cylinders are not treated properly (in this case). STEP format works fine. I can workaround the problem if I convert to nurbs the cylinders in the original CAD format before saving in IGES. I would say that it is an obvious workaround but it would be much better if we could treat the (trimmed) cylinders within IGES format. Can anyone make a test and verify it? Is there any hidden IGES param that I have to activate before loading my file? --- Markus Rhein | reply 2011/08/24 17:45 Hello Davide, I can confirm with Win 64 Bit, OCC 6.5.0 and standard import parameters there are missing faces after IGES import. The import works correct if you set the read.surfacecurve.mode parameter to the value 3 or -3: Interface_Static::SetIVal("read.surfacecurve.mode",3); This parameter is described in the IGES format user guide. I also have the problem with some IGES files, that the default parameter for this won╢t work and I have to set the import parameter manually to a certain value to enforce usage of 2D or 3D curves respectively. Does anyone know: Is there a automatic way to determine witch parameter should be used? " =================== Zip file is attached. Import as from step as from iges has 26 faces in the resulting shape. But when importing from iges file the cylindrical faces are more narrow comparing with analogical faces from step file. It looks like these faces lost half area. | ||||||||
Steps To Reproduce | pload All readstep cube.stp s * ; ## resulting shape s_1 is OK whatis s_1 ; ## SOLID explo s_1 F ; ## => 26 faces readiges cube.igs s2 *; ## resulting shape is KO whatis s2 ; ## COMPOUND explo s2 F; ## 26 faces, but first 12 faces (s2_1,..., s2_12 - are wrong) explo s2 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs iges bug22715_1, bug22715_2 | ||||||||
Attached Files | ![]() ![]() ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0022592) ika (developer) 2012-12-06 15:26 |
Parametrization of tabulated cylinders was changed(in writing and reading) in accordance of Type122 to [0,1]x[0,1] Git branch CR22715 is ready to be reviewed. Dear GKA, PLease review. |
(0022601) gka (developer) 2012-12-06 18:12 |
Dear bugmaster. Branch CR22715 is ready to be tested |
(0022818) mkv (tester) 2012-12-24 18:04 |
Dear BugMaster, Branch CR22715 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs iges bug22715_1, bug22715_2 - OK. |
![]() |
|||
occt: master a9da59ff
Timestamp: 2012-12-28 13:59:09 Author: ika [ Details ] [ Diff ] |
0022715: Incorrect faces of the filleted cube after import from iges file Writing and reading tabulated cylinders in IGES were changed in accordance of Type 122 (parametrization [0,1]x[0,1] some cosmetic changes Adding test cases for this fix |
||
mod - src/BRepToIGES/BRepToIGES_BRWire.cxx | [ Diff ] [ File ] | ||
mod - src/IGESToBRep/IGESToBRep_TopoSurface.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/iges/bug22715_1 | [ Diff ] [ File ] | ||
add - tests/bugs/iges/bug22715_2 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2011-08-25 10:37 | szy | New Issue | |
2011-08-25 10:37 | szy | Assigned To | => bugmaster |
2011-08-25 10:37 | szy | File Added: cube.7z | |
2011-09-21 11:12 | bugmaster | Target Version | 6.5.2 => 6.5.3 |
2011-09-21 14:00 | szy | Assigned To | bugmaster => gka |
2011-09-21 14:00 | szy | Status | new => assigned |
2012-02-09 08:53 | abv | Target Version | 6.5.3 => 6.5.4 |
2012-10-19 17:18 | gka | Target Version | 6.5.4 => 6.6.0 |
2012-10-19 17:19 | gka | Assigned To | gka => omy |
2012-10-26 20:31 | abv | Assigned To | omy => ika |
2012-11-22 11:11 | abv | Relationship added | related to 0023018 |
2012-12-06 15:26 | ika | Note Added: 0022592 | |
2012-12-06 15:26 | ika | Assigned To | ika => gka |
2012-12-06 15:26 | ika | Status | assigned => resolved |
2012-12-06 18:12 | gka | Note Added: 0022601 | |
2012-12-06 18:12 | gka | Status | resolved => reviewed |
2012-12-06 20:20 | mkv | Assigned To | gka => mkv |
2012-12-24 18:02 | mkv | File Added: bug22715_1 | |
2012-12-24 18:02 | mkv | File Added: bug22715_2 | |
2012-12-24 18:04 | mkv | Note Added: 0022818 | |
2012-12-24 18:05 | mkv | Test case number | => bugs iges bug22715_1, bug22715_2 |
2012-12-24 18:05 | mkv | Assigned To | mkv => bugmaster |
2012-12-24 18:05 | mkv | Status | reviewed => tested |
2013-01-04 11:35 | ika | Changeset attached | => occt master a9da59ff |
2013-01-04 11:35 | ika | Assigned To | bugmaster => ika |
2013-01-04 11:35 | ika | Status | tested => verified |
2013-01-04 11:35 | ika | Resolution | open => fixed |
2013-04-23 13:36 | aiv | Status | verified => closed |
2013-04-29 15:21 | aiv | Fixed in Version | => 6.6.0 |
Copyright © 2000 - 2019 MantisBT Team |